# HideoutRemindersTauri

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/test-clients/: Client.celestial-afk-off.txt  Client.celestial-afk.txt  Client.celestial-hideout.txt  Client.crashed.txt  Client.malicious-text.txt  Client.small.txt
src/components/: Card.tsx  CreateReminder.tsx  PoEStatus.tsx  ReminderListItem.tsx  RemindersList.tsx  SVGIcon.tsx  TimeAgo.tsx
src/hooks/: use-load-app.ts  use-play-audio.ts  use-play-tts.ts  use-save-reminder.ts  use-update-poe-status.ts
src/lib/: files.ts  helpers.ts  poe.ts  reminders.ts  settings.ts  state.ts  store.ts
src/pages/: MainPage.tsx  PaidVersionPage.tsx  SettingsPage.tsx
src/types/: types.ts
test/: reducer.test.ts  remdiners.test.ts  reminders.test.ts
