[package]
name = "hideout-reminders-tauri"
version = "0.1.1"
description = "Reminders for PoE players."
authors = ["Colin 'Vindexus' Kierans"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "dialog-confirm", "path-all", "fs-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0.107"
rev_lines = "0.3.0"
regex = "1.10.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
